ignoring a few bug testing scenes and scripts. new EZS version

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 
 *.sln
 *.csproj
+
+/Assets/EZS.Examples/TODO-03-DialogSwitcher/
+/Assets/EZS.Examples/TODO-03-DialogSwitcher.meta
+/Assets/EZS.Test
